# sarajas

./: .gitignore  .pre-commit-config.yaml  API.py  README.md  __init__.py  __main__.py  pyproject.toml  sandbox.py
.github/workflows/: publish_candidate.yaml  tests.yaml
database/: 0.aedb  1.aedb  3.aedb  __init__.py  __main__.py
dependencies/: requirements.txt  requirements_build.txt  requirements_dev.txt
meta/: API.py  README.md  __init__.py  __main__.py  constructor.py  contructor.py
meta/boot/: __init__.py  core.py
readme/: .changelog.md  readme.py
src/aetherdb/: _API.py  __init__.py  __main__.py
src/aetherdb/database/: 14.aedb  2.aedb  3.aedb
src/aetherdb/meta/: README.md  _API.py  __main__.py  texttools.py
src/aetherdb/meta/boot/: __init__.py
src/sarajas/database/: 1.aedb  4.aedb
tests/unittests/: test_public.py
